--- a/src/index.scss
+++ b/src/index.scss
@@ -13,3 +13,14 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.btn-background {
+  position: absolute;
+  top: -4px;
+  left: -4px;
+  right: -4px;
+  bottom: -4px;
+  background-color: white;
+  border-radius: 2rem;
+  z-index: -1;
+}
